[gd_scene load_steps=11 format=3 uid="uid://dbdv0k3gt74dl"]

[ext_resource type="Script" uid="uid://dho7osn6p11p6" path="res://GameScenes/UI/upgrade_card.gd" id="1_73gry"]
[ext_resource type="FontFile" uid="uid://rdmkk73yo3ar" path="res://Fonts/chary___.ttf" id="2_s5ouo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1mfh"]
bg_color = Color(0.03529412, 0.039215688, 0.078431375, 0.5882353)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.92156863, 0.92941177, 0.9137255, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_offset = Vector2(1, 1)
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_s5ouo"]
colors = PackedColorArray(0.5882353, 0.5882353, 0.5882353, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_73gry"]
gradient = SubResource("Gradient_s5ouo")

[sub_resource type="Curve" id="Curve_r7fwn"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_k5hpm"]
curve = SubResource("Curve_r7fwn")

[sub_resource type="Curve" id="Curve_741hv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rr2aj"]
curve = SubResource("Curve_741hv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3yau8"]
resource_local_to_scene = true
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 15, 1)
angle_min = 1.0728835e-05
angle_max = 360.00003
angular_velocity_min = -1.6093254e-05
angular_velocity_max = 372.15997
radial_velocity_min = 19.999977
radial_velocity_max = 99.99998
radial_velocity_curve = SubResource("CurveTexture_k5hpm")
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_rr2aj")
color_initial_ramp = SubResource("GradientTexture1D_73gry")

[node name="UpgradeCard" type="Panel"]
custom_minimum_size = Vector2(20, 30)
offset_right = 20.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v1mfh")
script = ExtResource("1_73gry")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="UpgradeIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("2_s5ouo")
theme_override_font_sizes/normal_font_size = 1
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="SelectParticles" type="GPUParticles2D" parent="."]
position = Vector2(10, 15)
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_3yau8")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
